First Combination Layout Issue Fixed

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -195,7 +195,7 @@ a{
     font-weight: 600;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
@@ -287,6 +287,7 @@ a{
     border: 0;
     flex-grow: 1;   /*?!*/
     padding: 1.5rem 2rem;
+    width: 0;
 }
 
 .input-group .btn {
